# Physarum-building-an-optimal-road-network

./: .gitignore  Physarum-building-an-optimal-road-network.sln  README.md
Physarum-building-an-optimal-road-network/: AgentGraphAnalyser.cpp  FlutterAdapter.cpp  Generator.cpp  Location.cpp  Physarum-building-an-optimal-road-network.vcxproj  Physarum-building-an-optimal-road-network.vcxproj.filters  SimulationInOutput.cpp  SlimeAgent.cpp  SlimeAgentsFabric.cpp  SlimeMoldClass.cpp  SlimeMoldClass.h  SlimeMoldSimulation.cpp  main.cpp  out1.txt  out10.txt  out100.txt  out101.txt  out102.txt  out103.txt  out104.txt  out105.txt  out106.txt  out107.txt  out108.txt  out109.txt  out11.txt  out110.txt  out111.txt  out112.txt  out113.txt  out114.txt  out115.txt  out116.txt  out117.txt  out118.txt  out119.txt  out12.txt  out120.txt  out121.txt  out122.txt  (+483 more)
physarum_flutter/: .metadata  README.md  analysis_options.yaml  pubspec.yaml
physarum_flutter/physarum_cpp_ffi/src/: AgentGraphAnalyser.cpp  CMakeLists.txt  FlutterAdapter.cpp  Generator.cpp  Location.cpp  Physarum-building-an-optimal-road-network.sln  Physarum-building-an-optimal-road-network.vcxproj  SimulationInOutput.cpp  SlimeAgent.cpp  SlimeAgentsFabric.cpp  SlimeMoldClass.h  SlimeMoldSimulation.cpp  main.cpp  physarum_cpp_ffi.c  physarum_cpp_ffi.cpp  physarum_cpp_ffi.h
txt out/: out1.txt  out104.txt  out106.txt  out109.txt  out112.txt  out114.txt  out115.txt  out117.txt  out118.txt  out12.txt  out126.txt  out127.txt  out128.txt  out13.txt  out131.txt  out133.txt  out138.txt  out139.txt  out14.txt  out140.txt  out141.txt  (+215 more)
(+136 files in other folders)
